--- a/webapps/myweb/index.html
+++ b/webapps/myweb/index.html
@@ -50,6 +50,15 @@
         <img src="./baidu.png"><br>
         <input type="text" size="32">
         <input type="button" value="百度一下" onclick="alert('点你妹')"><br>
+        <!--
+        请求当前页面时，浏览器地址栏上输入的网址为：
+        http://localhost:8088/myweb/index.html
+        因此下面超链接上的"./"指的位置就是：
+        http://localhost:8088/myweb/
+        所以下面超链接点击后，浏览器实际请求的路径为：
+        http://localhost:8088/myweb/reg.html
+        -->
+        <a href="reg.html">去注册</a>
         <a href="http://www.taobao.com">去淘宝</a>
     </center>
 </body>
