--- a/webapps/myweb/index.html
+++ b/webapps/myweb/index.html
@@ -60,6 +60,7 @@
         -->
         <a href="reg.html">去注册</a>
         <a href="http://www.taobao.com">去淘宝</a>
+        <a href="login.html">去登录</a>
     </center>
 </body>
 </html>
