--- a/webapps/myweb/reg.html
+++ b/webapps/myweb/reg.html
@@ -24,7 +24,12 @@
             上述地址中?左侧内容是由form表单中action指定的路径为准的
             ?右侧的内容就是表单中各输入框的信息，格式为:输入框的名字=输入框的信息，每个输入框信息之间用&分割
         -->
-        <form action="./regUser" method="get">
+        <!--form action="./regUser" method="get">-->
+        <!--
+            post提交时，内容会被包含在请求的消息正文中提交，在没有附件的情况下，内容仍然时字符串
+            并且格式与get中?右侧一致。
+        -->
+        <form action="./regUser" method="post">
             <table border="1">
                 <tr>
                     <td>用户名</td>
