--- a/webapps/myweb/index.html
+++ b/webapps/myweb/index.html
@@ -59,8 +59,10 @@
         http://localhost:8088/myweb/reg.html
         -->
         <a href="reg.html">去注册</a>
-        <a href="http://www.taobao.com">去淘宝</a>
         <a href="login.html">去登录</a>
+        <a href="./showAllUser">用户列表</a>
+        <a href="http://www.taobao.com">去淘宝</a>
+
     </center>
 </body>
 </html>
